refactor(core): 优化代码结构和性能
- 修改 TemplateMessageFactory 中 getMessages 方法的返回类型，移除泛型
- 在 WindResourcesUtils 中使用 toList()替代 Collectors.toList()，提高性能